--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "type":"module",
   "dependencies": {
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
@@ -14,6 +15,5 @@
     "swagger-ui-express": "^5.0.1",
     "uuid": "^13.0.0",
     "xlsx": "^0.18.5",
-    "type": "module"
   }
 }
