--- a/package.json
+++ b/package.json
@@ -14,6 +14,6 @@
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
     "uuid": "^13.0.0",
-    "xlsx": "^0.18.5",
+    "xlsx": "^0.18.5"
   }
 }
