--- a/config.env
+++ b/config.env
@@ -1,7 +1,7 @@
 ATLAS_URI = mongodb+srv://cccredemptionparishwpg_db_user:QrGeBIXY02ET6n1O@cluster0.06gf73f.mongodb.net/membershipDB
 SECRETKEY = ePe5vLCcWUpyoOkElTPkreNvdWoHQ4RN
-EMAIL = "tai.adigun01@gmail.com"
-EMAIL_PASSWORD = "gkcdyxwnyjlcatgl"
+EMAIL = "cccredemptionparishwpg@gmail.com"
+EMAIL_PASSWORD = "hyudnsnpdnvfucsn"
 NODE_ENV=production
 
 
